--- a/Lab12/Fleets-lab12.html
+++ b/Lab12/Fleets-lab12.html
@@ -14,10 +14,10 @@
     <main>
         <h4>Numbers for GCD</h4> 
         <label for="input1">First#</label> 
-        <input type="text" id= "input1" value = "" ><br> 
+        <input type="text" id= "input1" ><br> 
         <br/>
         <label for="input2">Second#</label> 
-        <input type="text" id="input2" value = "" ><br> 
+        <input type="text" id="input2" ><br> 
         <br/>
         =======================================<br>
         <p id= "display" > </p>
